some changes - added dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -25,18 +25,30 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.liquibase:liquibase-core'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	//swagger
 	//http://localhost:8090/v3/api-docs
 	//http://localhost:8090/swagger-ui/index.html#/
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.6'
-}
 
+	//DB
+	//liquibase
+	implementation 'org.liquibase:liquibase-core'
+	//h2
+	implementation 'com.h2database:h2:2.3.232'
+	//jdbc
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+}
+configurations.all {
+	exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jdbc'
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
