some changes - edited dependencies, added configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,8 @@
 server.port=8091
+
+spring.datasource.url=jdbc:h2:file:./db/transaction
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.hikari.read-only=true
+spring.h2.console.enabled=true
