--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 server.port=8091
 
+#application.recommendations-db.url=jdbc:h2:file:./db/transaction
 spring.datasource.url=jdbc:h2:file:./db/transaction
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=
