--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	implementation 'com.h2database:h2'
 	//jdbc
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	//https://mvnrepository.com/artifact/org.postgresql/postgresql
+	implementation 'org.postgresql:postgresql:42.7.5'
+
 }
 configurations.all {
 	exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
