--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,15 @@
 server.port=8091
 
-#application.recommendations-db.url=jdbc:h2:file:./db/transaction
-spring.datasource.url=jdbc:h2:file:./db/transaction
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
+#h2
+application.recommendations-db.url=jdbc:h2:file:./db/transaction
+#spring.datasource.url=jdbc:h2:file:./db/transaction
 spring.datasource.hikari.read-only=true
 spring.h2.console.enabled=true
+
+#posgresql
+spring.datasource.url=jdbc:postgresql://localhost:5435/starbank
+spring.datasource.username=team-group
+spring.datasource.password=333
+## Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
