average changes - edited properties, set up posgresql connection, join jdbc lib for this db, created usually table for future rules

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,10 @@ spring.datasource.password=333
 ## Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# Liquibase for Postgresql
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yaml
+
+spring.liquibase.enabled=true
+spring.liquibase.url=jdbc:postgresql://localhost:5435/starbank
+spring.liquibase.user=team-group
+spring.liquibase.password=333
