--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     //jdbc
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     //https://mvnrepository.com/artifact/org.postgresql/postgresql
-    implementation 'org.postgresql:postgresql:42.7.5'
+    implementation 'org.postgresql:postgresql'
+    //add to project Spring AOP (Aspect)
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 
 }
 configurations.all {
