--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,18 +1,20 @@
 server.port=8091
 
 #h2
-application.recommendations-db.url=jdbc:h2:file:./db/transaction
-#spring.datasource.url=jdbc:h2:file:./db/transaction
-spring.datasource.hikari.read-only=true
-spring.h2.console.enabled=true
+spring.datasource.h2.url=jdbc:h2:file:./db/transaction
+#spring.datasource.hikari.read-only=true
+#spring.h2.console.enabled=true
 
 #posgresql
-spring.datasource.url=jdbc:postgresql://localhost:5435/starbank
-spring.datasource.username=team-group
-spring.datasource.password=333
-## Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.postgresql.url=jdbc:postgresql://localhost:5435/starbank
+#spring.datasource.postgresql.username=team-group
+#spring.datasource.postgresql.password=333
+#spring.datasource.postgresql.driver=org.postgresql.Driver
+
+### Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
 # Liquibase for Postgresql
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yaml
 
