feat(api): add caches - stage 2 on issue #7 #12 Acked-by: MK

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.6'
 
+    //Telegram
+    //implementation 'com.github.pengrad:java-telegram-bot-api';
+
+    //cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
     //DB
     //liquibase
     implementation 'org.liquibase:liquibase-core'
@@ -50,8 +56,6 @@ dependencies {
     //add to project Spring AOP (Aspect)
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
-    //Telegram
-    //implementation 'com.github.pengrad:java-telegram-bot-api';
 
 }
 configurations.all {
