feat(service): #13 finish write second and theed task on stage 3 Acked-by: MK

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,3 +22,4 @@ telegram.bot.username=@starBankProjectSkyproBot
 logging.level.org.skypro.star.listener=DEBUG
 logging.level.org.telegram=DEBUG
 logging.level.org.skypro.star.service=ERROR
+logging.level.org.skypro.star.repository=WARN
