--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,12 +4,19 @@ server.port=8091
 spring.datasource.h2.url=jdbc:h2:file:./db/transaction
 
 #posgresql
-spring.datasource.postgresql.url=jdbc:postgresql://localhost:5435/starbank
+spring.datasource.postgresql.url=jdbc:postgresql://localhost:5432/starbank
 
 # Liquibase for Postgresql
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yaml
 
 spring.liquibase.enabled=true
-spring.liquibase.url=jdbc:postgresql://localhost:5435/starbank
+spring.liquibase.url=jdbc:postgresql://localhost:5432/starbank
 spring.liquibase.user=team-group
 spring.liquibase.password=333
+
+# Telegram Bot
+telegram.bot.token=8310370118:AAE6IM4PctDkiajRi_IBIyC5pf6kzIHZwt4
+telegram.bot.name=BankStartSkyProBot
+
+management.endpoints.web.exposure.include=info
+management.info.env.enabled=true
