feat(api): make method get buildInfo from ./gradlew bootBuildInfo   #18 Acked-by: MK

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     //add to project Spring AOP (Aspect)
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 }
 configurations.all {
@@ -66,4 +67,8 @@ configurations.all {
 }
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+springBoot {
+    buildInfo()
 }
