--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=star
 
-
+management.endpoints.web.exposure.include=info
+management.info.build.enabled=true
 
 
 #default port number
