Finish TGBot Zotov

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,10 @@ spring.liquibase.password=333
 
 # Telegram Bot
 telegram.bot.token=8310370118:AAE6IM4PctDkiajRi_IBIyC5pf6kzIHZwt4
-telegram.bot.name=BankStartSkyProBot
+telegram.bot.name=START BankBot
+telegram.bot.username=BankStartSkyProBot
 
 management.endpoints.web.exposure.include=info
 management.info.env.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
