--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'org.telegram:telegrambots-spring-boot-starter:6.7.0'
     implementation 'org.telegram:telegrambots-abilities:6.7.0'
 //     Для PostConstruct в Spring Boot 3
-//    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
 
     //cache
@@ -75,4 +75,17 @@ tasks.named('test') {
 
 springBoot {
     buildInfo()
+}
+
+javadoc {
+    destinationDir = file("${buildDir}/docs/javadoc")
+    options.encoding = 'UTF-8'
+    options.charSet = 'UTF-8'
+    options.addStringOption('Xdoclint:none', '-quiet')
+
+    // Для Spring Boot и Lombok
+    options.addBooleanOption('html5', true)
+
+    // Исключаем generated папки (если есть)
+    exclude '**/generated/**'
 }
