--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.github.pengrad:java-telegram-bot-api:7.9.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 configurations.all {
     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
