debug(api) #26 & #23: Recommendation are gets according created dynamic rule on #26; SOLID -> separated controller rest methods with code's SOLID Acked-by: MK

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,11 +15,14 @@ spring.liquibase.user=team-group
 spring.liquibase.password=333
 
 # Telegram
-telegram.bot.token=7884964114:AAHAkahujRuGIMLPZQNzRiwAEAMPC8gPpdA
+telegram.bot.token=7884964114:AAE_sFtcDcES3JYpUMsr-pWWRCk2W3Q_1-0
 telegram.bot.username=@starBankProjectSkyproBot
 
 # Logger
-logging.level.org.skypro.star.listener=DEBUG
-logging.level.org.telegram=DEBUG
-logging.level.org.skypro.star.service=ERROR
-logging.level.org.skypro.star.repository=WARN
+#logging.level.org.skypro.star.listener=DEBUG
+#logging.level.org.telegram=DEBUG
+#logging.level.org.skypro.star.service=ERROR
+#logging.level.org.skypro.star.repository=WARN
+#
+logging.level.org.skypro.star.service=TRACE
+
